--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
   <!DOCTYPE html>
 
-  <html><
+  <html lang="pt-br">
 
       <head>
       <meta charset="UTF-8">
       <title>minha pagina web</title>
       <link rel="stylessheet" href ="styles.css">
       </head>
+      <header>
+         Cozinhando com gabi
+      </header>
+
       <body
-
+        <div class="principal">
       
-  <h1> <strong> guloseimas da gabi</strong></h1> 
-
+  <h1 id> guloseimas da gabi</strong></h1> 
+    <img id="img1" src="shutterstock_1151228951.jpg">
       <p>  Você sabe como o famoso brigadeiro surgiu? Aquele que é amado por todos os brasileiros e apreciados pela maioria dos gringos.   </p>
       <p>  O Brigadeiro foi inventado no Brasil depois da Segunda Guerra Mundial (1939-1945). Naquele tempo, era muito difícil conseguir leite fresco e açúcar para se fazer receitas de doces. Aí, descobriram que a mistura de leite condensado e chocolate resultava em um docinho bem gostoso (Brigadeiro para presidente). Ainda faltava dar um nome para o novo doce. Na mesma época, aconteciam as eleições para presidente do Brasil, e um dos candidatos era o Brigadeiro Eduardo Gomes. Na campanha, ele utilizava uma propaganda engraçada, que ficou na boca do povo: “Vote no Brigadeiro que é bonito e solteiro”. Suas eleitoras batizaram o doce em homenagem ao candidato. O candidato conquistou um grupo de fãs do Pacaembu, bairro de São Paulo, que organizaram festas para promover sua candidatura. A guloseima feita de leite, ovos, manteiga, açúcar e chocolate tanto agradou que, numa das festas de campanha, foi feito o doce para arrecadar fundos.
         As mulheres que trabalhavam na campanha, em vez do “santinho” tradicional do candidato, distribuíam o docinho para ganhar votos.
@@ -24,6 +28,7 @@
       <p>  Além de que o nosso briageiro á várias variações,uma das sobremesas mais queridas do Brasil e do mundo, com poucos ingredientes e preparos, já conquista nossos corações. Mas com algumas modificações você consegue sair da mesmice sem deixar de se saborear, com uma pitada do brigadeiro clássico!
         As inovações nas receitas não param de surgir, e trazem sempre mais originalidade. Nesse caso, o surgimento dos “brigadeiros gourmet” foi uma novidade e tanto! Essa variação que usa e abusa da criatividade, traz várias versões do doce. Você pode fazer com chocolate branco, belga, doce de leite, coco, amendoim, limão, e incrementar uma infinidade de sabores, a receita pode ser adaptada dependendo dos seus gostos. Mesmo que o modelo mais famoso do docinho serve-se em forminhas nas festas, também existe a possibilidade de utilizar copinhos, que são mais delicados. Para isso, fazemos o brigadeiro “de colher”, que é deixar a textura dele mais mole, para literalmente poder se comer com uma colher. Aliás, fazer o doce dessa maneira é perfeito para um domingo de preguiça, em que queremos apenas ver um filminho no sofá.
      </p>
-
+        </div>
+        
     <body>
      <html>
