--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <title>minha pagina web</title>
       <link rel="stylessheet" href ="styles.css">
       </head>
+
       <header>
          Cozinhando com gabi
       </header>
@@ -14,10 +15,10 @@
       <body
         <div class="principal">
       
-  <h1 id> guloseimas da gabi</strong></h1> 
+  <h1 id="titulo1" > guloseimas da gabi</strong></h1> 
     <img id="img1" src="shutterstock_1151228951.jpg">
-      <p>  Você sabe como o famoso brigadeiro surgiu? Aquele que é amado por todos os brasileiros e apreciados pela maioria dos gringos.   </p>
-      <p>  O Brigadeiro foi inventado no Brasil depois da Segunda Guerra Mundial (1939-1945). Naquele tempo, era muito difícil conseguir leite fresco e açúcar para se fazer receitas de doces. Aí, descobriram que a mistura de leite condensado e chocolate resultava em um docinho bem gostoso (Brigadeiro para presidente). Ainda faltava dar um nome para o novo doce. Na mesma época, aconteciam as eleições para presidente do Brasil, e um dos candidatos era o Brigadeiro Eduardo Gomes. Na campanha, ele utilizava uma propaganda engraçada, que ficou na boca do povo: “Vote no Brigadeiro que é bonito e solteiro”. Suas eleitoras batizaram o doce em homenagem ao candidato. O candidato conquistou um grupo de fãs do Pacaembu, bairro de São Paulo, que organizaram festas para promover sua candidatura. A guloseima feita de leite, ovos, manteiga, açúcar e chocolate tanto agradou que, numa das festas de campanha, foi feito o doce para arrecadar fundos.
+      <p class="p1 ">  Você sabe como o famoso brigadeiro surgiu? Aquele que é amado por todos os brasileiros e apreciados pela maioria dos gringos.   </p>
+      <p class="p2" >  O Brigadeiro foi inventado no Brasil depois da Segunda Guerra Mundial (1939-1945). Naquele tempo, era muito difícil conseguir leite fresco e açúcar para se fazer receitas de doces. Aí, descobriram que a mistura de leite condensado e chocolate resultava em um docinho bem gostoso (Brigadeiro para presidente). Ainda faltava dar um nome para o novo doce. Na mesma época, aconteciam as eleições para presidente do Brasil, e um dos candidatos era o Brigadeiro Eduardo Gomes. Na campanha, ele utilizava uma propaganda engraçada, que ficou na boca do povo: “Vote no Brigadeiro que é bonito e solteiro”. Suas eleitoras batizaram o doce em homenagem ao candidato. O candidato conquistou um grupo de fãs do Pacaembu, bairro de São Paulo, que organizaram festas para promover sua candidatura. A guloseima feita de leite, ovos, manteiga, açúcar e chocolate tanto agradou que, numa das festas de campanha, foi feito o doce para arrecadar fundos.
         As mulheres que trabalhavam na campanha, em vez do “santinho” tradicional do candidato, distribuíam o docinho para ganhar votos.
         Com o tempo, o brigadeiro foi ficando cada vez melhor. Para enfeitá-lo e deixá-lo mais saboroso, foi inventado o chocolate granulado.
         Depois, outra receitas foram criadas a partir da original.
@@ -30,5 +31,21 @@
      </p>
         </div>
         
+        <div class="Beneficios">
+          <h2 id="titulo2"> Cozinhando com Gabi </h2> 
+
+         <ul>
+
+         <1i class="iten1"> ESCREVA UM ITEM</1i>
+         <1i class="iten2"> ESCREVA UM ITEM</1i>
+         <1i class="iten3"> ESCREVA UM ITEM</1i>
+
+         </ul>
+
+         <img id="img2" src="nome da sua imagem">
+
+         </div>
+
     <body>
+
      <html>
