--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 
          <ul>
 
-         <1i class="iten1"> ESCREVA UM ITEM</1i>
-         <1i class="iten2"> ESCREVA UM ITEM</1i>
-         <1i class="iten3"> ESCREVA UM ITEM</1i>
+         <1i class="iten1"> Tenha uma boa alimentação comendo saúdavel</1i>
+         <1i class="iten2"> Seja feliz comendo oque gosta</1i>
+         <1i class="iten3"> Doces e salgados deliciosos,você só encontra aqui!</1i>
 
          </ul>
 
-         <img id="img2" src="nome da sua imagem">
+         <img id="img2" src="como_fazer_coxinha_5b80490b71f939.44065329.jpg">
 
          </div>
 
