--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
          <ul>
 
-         <1i class="iten1"> Tenha uma boa alimentação comendo saúdavel</1i>
-         <1i class="iten2"> Seja feliz comendo oque gosta</1i>
-         <1i class="iten3"> Doces e salgados deliciosos,você só encontra aqui!</1i>
+         <li class="iten1"> Tenha uma boa alimentação comendo saúdavel</1i>
+         <li class="iten2"> Seja feliz comendo oque gosta</1i>
+         <li class="iten3"> Doces e salgados deliciosos,você só encontra aqui!</1i>
 
          </ul>
 
