--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <body
         <div class="principal">
       
-  <h1 id="titulo1" > guloseimas da gabi</strong></h1> 
+  <h1 id="titulo1" > Guloseimas da Gabi</strong></h1> 
     <img id="img1" src="shutterstock_1151228951.jpg">
       <p class="p1 ">  Você sabe como o famoso brigadeiro surgiu? Aquele que é amado por todos os brasileiros e apreciados pela maioria dos gringos.   </p>
       <p class="p2" >  O Brigadeiro foi inventado no Brasil depois da Segunda Guerra Mundial (1939-1945). Naquele tempo, era muito difícil conseguir leite fresco e açúcar para se fazer receitas de doces. Aí, descobriram que a mistura de leite condensado e chocolate resultava em um docinho bem gostoso (Brigadeiro para presidente). Ainda faltava dar um nome para o novo doce. Na mesma época, aconteciam as eleições para presidente do Brasil, e um dos candidatos era o Brigadeiro Eduardo Gomes. Na campanha, ele utilizava uma propaganda engraçada, que ficou na boca do povo: “Vote no Brigadeiro que é bonito e solteiro”. Suas eleitoras batizaram o doce em homenagem ao candidato. O candidato conquistou um grupo de fãs do Pacaembu, bairro de São Paulo, que organizaram festas para promover sua candidatura. A guloseima feita de leite, ovos, manteiga, açúcar e chocolate tanto agradou que, numa das festas de campanha, foi feito o doce para arrecadar fundos.
