--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <head>
       <meta charset="UTF-8">
       <title>minha pagina web</title>
-      <link rel="stylessheet" href ="styles.css">
+      <link rel="stylesheet" href ="styles.css">
       </head>
 
       <header>
