--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         
         <div class="Beneficios">
-          <h2 id="titulo2"> Cozinhando com Gabi </h2> 
+          <h2 id="titulo2"> </h2> 
 
          <ul>
 
