--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         Depois, outra receitas foram criadas a partir da original.
       
       </p>
-      <p class="p2">  Além de que o nosso briageiro á várias variações,uma das sobremesas mais queridas do Brasil e do mundo, com poucos ingredientes e preparos, já conquista nossos corações. Mas com algumas modificações você consegue sair da mesmice sem deixar de se saborear, com uma pitada do brigadeiro clássico!
+      <p class="p2">  Além de que o nosso brigadeiro á várias variações,uma das sobremesas mais queridas do Brasil e do mundo, com poucos ingredientes e preparos, já conquista nossos corações. Mas com algumas modificações você consegue sair da mesmice sem deixar de se saborear, com uma pitada do brigadeiro clássico!
         
      </p>
         </div>
